[package]
name = "generate-passwords"
version = "0.1.0"
authors = ["Alan Darmasaputra <kelerchian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
passwords = "3.0.0"

[[bin]]
name = "generate-passwords"
path = "main.rs"
